updated dependencies and urls